@@ -163,9 +163,9 @@ public abstract class ActivityChartBasePanel extends Panel {
             Integer count = data.get(period);
 
             if (count == null) {
-                count = new Integer(1);
+                count = Integer.valueOf(1);
             } else {
-                count = new Integer(count.intValue() + 1);
+                count = Integer.valueOf(count.intValue() + 1);
             }
 
             data.put(period, count);
