@@ -38,7 +38,7 @@ public class FeatureWrapperTest {
                         featureType,
                         new Object[] {
                             "one",
-                            new Integer(1),
+                            Integer.valueOf(1),
                             new Double(1.1),
                             gf.createPoint(new Coordinate(1, 1))
                         },
@@ -48,7 +48,7 @@ public class FeatureWrapperTest {
                         featureType,
                         new Object[] {
                             "two",
-                            new Integer(2),
+                            Integer.valueOf(2),
                             new Double(2.2),
                             gf.createPoint(new Coordinate(2, 2))
                         },
@@ -58,7 +58,7 @@ public class FeatureWrapperTest {
                         featureType,
                         new Object[] {
                             "three",
-                            new Integer(3),
+                            Integer.valueOf(3),
                             new Double(3.3),
                             gf.createPoint(new Coordinate(3, 3))
                         },
